# SeismicMesh

./: .circleci  .gitignore  .gitmodules  .pylintrc  .travis.yml  BezierSurface.m  CMakeLists.txt  CODE_OF_CONDUCT.md  Example1.m  Example2D.m  Example_2D.m  Example_3D.m  Example_SurfaceMeshing.m  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  WriteOutToGmsh_V2.m  codecov.yml  driver.py  example.py  libpath.m  mesh_rotate.py  meshsurface.m  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
@edgefx/: edgefx.m
@geodata/: geodata.m
@grd/: grd.m  grd.m~
@meshgen/: meshgen.m  meshgen.m~
SeismicMesh/: README.txt  __about__.py  __init__.py  mesh_generator.py  mesh_size_function.py  mesh_utils.py
benchmarks/: README.md  benchmark_BP2004.py  benchmark_EAGE.py  benchmark_ball.py  benchmark_ball_optmi.py  benchmark_circle.py  benchmark_cuboid.py  benchmark_disk.py  benchmark_sphere.py  benchmark_uniform_cuboid.py  helpers.py  requirements.txt  run_BP2004.py  run_EAGE.py  run_ball.py  run_disk.py
distmesh/: dellipse.mexa64  dellipse.mexmaci64  dellipse.mexw32  dellipse.mexw64  dellipsoid.mexa64  dellipsoid.mexmaci64  dellipsoid.mexw32  dellipsoid.mexw64  distmesh2d.m  distmeshnd.m  distmeshnd.m~  dsegment.mexa64  dsegment.mexmaci64  dsegment.mexw32  dsegment.mexw64  flipEdge.cpp  simpplot.m  trisurfupd.mexa64  trisurfupd.mexw32  untitled5.m
docs/: conf.py  index.rst  requirements.txt  setup.py
examples/: __init__.py  example_2D.py  example_2D_SDF.py  example_2D_irregular.py  example_2D_parallel.py  example_3D.py  example_3D_SDF.py  example_3D_SDF2.py  example_3D_parallel.py  example_write.py  no_water_layer_2d.py  salt_body_egage.py
matlab/: Example_2D.m  Example_DomainExtension.m  README.md  libpath.m
old/: BuildFullMarmousiMesh.m  InsertSubdomain.m  MakeSubdomain.m  WriteOutToGmsh_V2.m
paper/: paper.bib  paper.md
python/: EdgeFunction.py  FastHJ.cpp  MeshGenerator.py  MeshSizeFunction.py  driver.py  edgefx.py  gradlim.py  utils.py
test/: __init__.py  points.txt  test_2d_SDF.py  test_2d_domain_ext.py  test_2dmesher.py  test_2dmesher_par.py  test_3d_SDF.py  test_3dmesher.py  test_3dmesher_par_adapt.py  test_geometry2.py  test_grade.py  test_hmin.py  write3D.py
tests/: __init__.py  cells.txt  test_2d_SDF.py  test_2d_domain_ext.py  test_2d_min_qual.py  test_2dmesher.py  test_2dmesher_SDF.py  test_2dmesher_domain_extension.py  test_2dmesher_par.py  test_2dmesher_par_adapt.py  test_2dmesher_r0m_values.py  test_2dmesher_vs_water.py  test_3d_SDF.py  test_3d_sliver.py  test_3dmesher.py  test_3dmesher_SDF.py  test_3dmesher_domain_extension.py  test_3dmesher_par.py  test_3dmesher_par_adapt.py  test_README.py  test_geometry.py  test_geometry2.py  test_grade.py  test_hmin.py  test_immersion.py  test_mesher_serial.py  test_pfix.py  test_ptin.py  test_rotations.py  test_smooth_sets.py  test_verbose.py  testing.segy  write3D.py
(+96 files in other folders)
