[metadata]
name = SeismicMesh
version = 3.1.6
url = https://github.com/krober10nd/SeismicMesh
author = Keith Roberts
email = keithrbt0@gmail.com
description = 2D/3D serial and parallel triangular mesh generation for seismology
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
[options]
packages = find:
setup_requires = pybind11 >= 2.2
install_requires =
        numpy
        segyio
        scipy
        meshio
        h5py
        matplotlib
        mpi4py
        pybind11 >= 2.2
python_requires = >=3.0
